--- a/.config/fcitx5/conf/classicui.conf
+++ b/.config/fcitx5/conf/classicui.conf
@@ -19,12 +19,13 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
 # Theme
-# Theme=catppuccin-mocha-blue
-Theme=catppuccin-mocha
+Theme=catppuccin-mocha-mauve
 # Dark Theme
-DarkTheme=default-dark
+DarkTheme=catppuccin-macchiato-pink
 # Follow system light/dark color scheme
 UseDarkTheme=False
+# Follow system accent color if it is supported by theme and desktop
+UseAccentColor=True
 # Use Per Screen DPI on X11
 PerScreenDPI=True
 # Force font DPI on Wayland
