--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,11 +25,10 @@ env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
 
 # Input Method Environment Variables
-env = GTK_IM_MODULE,fcitx
+# env = GTK_IM_MODULE,fcitx
 env = QT_IM_MODULE,fcitx
 env = XMODIFIERS,@im=fcitx
-env = SDL_IM_MODULE,fcitx
-env = GLFW_IM_MODULE,ibus
+env = QT_IM_MODULES,"wayland;fcitx"
 
 # =======================================================================================
 # AUTOSTART (EXEC-ONCE)
@@ -37,7 +36,8 @@ env = GLFW_IM_MODULE,ibus
 
 # Portals: Must be restarted to pick up the env vars
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = killall xdg-desktop-portal-hyprland; killall xdg-desktop-portal; /usr/libexec/xdg-desktop-portal-hyprland & /usr/libexec/xdg-desktop-portal &
+# exec-once = killall xdg-desktop-portal-hyprland; killall xdg-desktop-portal; /usr/libexec/xdg-desktop-portal-hyprland & /usr/libexec/xdg-desktop-portal &
+exec-once = ~/.config/hypr/xdg-desktop-portal
 
 # Authentication Agent (Polkit)
 exec-once = /usr/libexec/hyprpolkitagent
@@ -185,7 +185,7 @@ windowrule = workspace 5, class:(tidal-hifi)
 windowrule = workspace 4, class:^(org.telegram.desktop)$
 windowrule = workspace 3, title:^(.*(Disc|ArmC|WebC)ord.*)$
 windowrule = workspace 3, class:^(vesktop)$
-windowrule = workspace 2, class:^(brave-browser|firefox|firefox-esr|floorp|zen-beta|Chromium-browser|chromium-browser)$
+windowrule = workspace 2, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
 windowrule = workspace 5, class:^(foobar2000.exe)$
 windowrule = workspace 1, class:^(jetbrains-.*)$
 windowrule = workspace 1, class:^(Albion-Online)$
@@ -203,10 +203,10 @@ windowrule = float, class:^(org.keepassxc.KeePassXC)$,title:^(Generate Password)
 windowrule = float, class:^(org.keepassxc.KeePassXC)$,title:^(KeePassXC - Browser Access Request)$
 windowrule = float, class:^(xdg-desktop-portal-gtk)$
 
-windowrule = noblur, class:^(brave-browser|firefox|firefox-esr|floorp|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = noshadow, class:^(brave-browser|firefox|firefox-esr|floorp|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = idleinhibit focus, class:^(brave-browser|firefox|firefox-esr|floorp|zen-beta|Chromium-browser|chromium-browser)$, title:^(.*YouTube.*)$
-windowrule = idleinhibit fullscreen, class:^(brave-browser|firefox|firefox-esr|floorp|zen-beta|Chromium-browser|chromium-browser)$
+windowrule = noblur, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
+windowrule = noshadow, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
+windowrule = idleinhibit focus, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, title:^(.*YouTube.*)$
+windowrule = idleinhibit fullscreen, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
 windowrule = tile, class:^(foobar2000.exe)$
 windowrule = noanim, class:^(foobar2000.exe)$
 windowrule = noblur, class:^(jetbrains-.*)$
@@ -230,7 +230,8 @@ bind = $mod SHIFT, E, exec, thunar
 bind = $mod, M, exec, thunderbird
 bind = $mod, P, exec, fuzzel
 bind = $mod, D, exec, vesktop
-bind = $mod SHIFT, G, exec, firefox
+bind = $mod, G, exec, firefox
+bind = $mod SHIFT, G, exec, zen
 
 # Utils (Clipboard & Screenshots)
 bind = $mod, O, exec, clipboard-picker
