update portage config
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/portage/repos.conf/eselect-repo.conf
+++ b/.config/portage/repos.conf/eselect-repo.conf
@@ -4,3 +4,8 @@
 location = /var/db/repos/guru
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/guru.git
+
+[wayland-desktop]
+location = /var/db/repos/wayland-desktop
+sync-type = git
+sync-uri = https://github.com/bsd-ac/wayland-desktop.git
