Update fcitx5 config
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/fcitx5/config
+++ b/.config/fcitx5/config
@@ -1,14 +1,14 @@
 [Hotkey]
-# Enumerate when press trigger key repeatedly
+# Enumerate when holding modifier of Toggle key
 EnumerateWithTriggerKeys=True
-# Temporally switch between first and current Input Method
-AltTriggerKeys=
-# Skip first input method while enumerating
-EnumerateSkipFirst=False
 # Activate Input Method
 ActivateKeys=
 # Deactivate Input Method
 DeactivateKeys=
+# Temporarily Toggle Input Method
+AltTriggerKeys=
+# Skip first input method while enumerating
+EnumerateSkipFirst=False
 # Time limit in milliseconds for triggering modifier key shortcuts
 ModifierOnlyKeyTimeout=250
 
@@ -61,9 +61,9 @@ CompactInputMethodInformation=True
 ShowFirstInputMethodInformation=True
 # Default page size
 DefaultPageSize=5
-# Override Xkb Option
+# Override XKB Option
 OverrideXkbOption=False
-# Custom Xkb Option
+# Custom XKB Option
 CustomXkbOption=
 # Force Enabled Addons
 EnabledAddons=
