--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,21 @@
 # =======================================================================================
 # MONITOR CONFIG
 # =======================================================================================
-monitor = HDMI-A-1, 1920x1080@180, auto, 1, bitdepth, 10
-monitor = eDP-1, disable
+monitorv2 {
+  output = HDMI-A-1
+  mode = 1920x1080@180
+  position = auto
+  scale = 1
+  # cm = dcip3
+  supports_hdr = true
+  supports_wide_color = true
+  bitdepth = 10
+}
+
+monitorv2 {
+  output = eDP-1
+  disabled = true
+}
 
 # =======================================================================================
 # ENVIRONMENT VARIABLES
@@ -19,8 +32,8 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # Theming
-env = HYPRCURSOR_THEME,phinger-cursors-light
-env = XCURSOR_THEME,phinger-cursors-light
+env = HYPRCURSOR_THEME,Future-Cyan-Hyprcursor_Theme
+env = XCURSOR_THEME,Future-Cyan-Hyprcursor_Theme
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
 
@@ -36,21 +49,26 @@ env = QT_IM_MODULES,"wayland;fcitx"
 
 # Portals: Must be restarted to pick up the env vars
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = killall xdg-desktop-portal-hyprland; killall xdg-desktop-portal; /usr/libexec/xdg-desktop-portal-hyprland & /usr/libexec/xdg-desktop-portal &
-exec-once = ~/.config/hypr/xdg-desktop-portal
+exec-once = ~/.config/hypr/xdg-desktop-portal.sh
+
+# Clipboard Persist
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 # Authentication Agent (Polkit)
-exec-once = /usr/libexec/hyprpolkitagent
+exec-once = /usr/lib/hyprpolkitagent
 
 # Set cursor
-exec-once=hyprctl setcursor phinger-cursors-light 24
+exec-once = hyprctl setcursor Future-Cyan-Hyprcursor_Theme 24
 
 # Autostart Fcitx5 Daemon
 exec-once = fcitx5 -d --replace
 
 # System Apps
-exec-once = gentoo-pipewire-launcher &
-exec-once = waybar &
+exec-once = hypridle
+exec-once = hyprsunset
+exec-once = ~/.config/hypr/pipewire.sh
+exec-once = sleep 1; qs &
 exec-once = brightnessctl set 10%
 exec-once = mako
 exec-once = [workspace 9 silent;noanim] thunderbird
@@ -166,58 +184,56 @@ xwayland {
 # =======================================================================================
 # WINDOW RULES
 # =======================================================================================
+# (Keep existing workspace rules as they are separate from windowrule syntax)
 workspace = w[tv1]s[false], gapsout:0, gapsin:0
 workspace = f[1]s[false], gapsout:0, gapsin:0
-# windowrule = border_size 0, match:float yes, match:workspace w[tv1]s[false]
-# windowrule = rounding 0, match:float 0, match:workspace w[tv1]s[false]
-# windowrule = border_size 0, match:float 0, match:workspace f[1]s[false]
-# windowrule = rounding 0, match:float 0, match:workspace f[1]s[false]
-windowrule = rounding 5, onworkspace:s[true]
 
-windowrule = workspace 9, class:^(thunderbird)$
-windowrule = workspace 8, class:^(whatsapp-for-linux)$
-windowrule = workspace 7, class:^(qBittorrent|org.qbittorrent.qBittorrent)$
-windowrule = workspace 6, class:^(steam)$
-windowrule = workspace 6, title:^(Sign in to Steam)$
-windowrule = workspace 5, class:^(spotify)$, title:^(Spotify( (Premium|Free))?)$
-windowrule = workspace 5, class:(org.fooyin.fooyin)
-windowrule = workspace 5, class:(tidal-hifi)
-windowrule = workspace 4, class:^(org.telegram.desktop)$
-windowrule = workspace 3, title:^(.*(Disc|ArmC|WebC)ord.*)$
-windowrule = workspace 3, class:^(vesktop)$
-windowrule = workspace 2, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = workspace 5, class:^(foobar2000.exe)$
-windowrule = workspace 1, class:^(jetbrains-.*)$
-windowrule = workspace 1, class:^(Albion-Online)$
+# Applications -> Workspaces
+windowrule = match:class ^(thunderbird)$, workspace 9
+windowrule = match:class ^(whatsapp-for-linux)$, workspace 8
+windowrule = match:class ^(qBittorrent|org.qbittorrent.qBittorrent)$, workspace 7
 
-windowrule = float, title:^(Extension: (Bitwarden Password Manager))
-windowrule = float, title:^(Media viewer)$, class:^(org.telegram.desktop)$
-windowrule = float, class:^(steam)$,title:^(Special Offers)$
-windowrule = float, class:^(steam)$,title:^(Steam - News)$
-windowrule = nofocus, class:^(steam)$,title:^(Steam - News)$
-windowrule = nofocus, class:^(steam)$,title:^(notificationtoasts_.*_desktop)$
-windowrule = noinitialfocus, class:^(steam)$, title:(^notificationtoasts.*)
-windowrule = nofocus, title:(^notificationtoasts.*)
-windowrule = nofocus, class:^(steam)$, title:^()$
-windowrule = float, class:^(org.keepassxc.KeePassXC)$,title:^(Generate Password)$
-windowrule = float, class:^(org.keepassxc.KeePassXC)$,title:^(KeePassXC - Browser Access Request)$
-windowrule = float, class:^(xdg-desktop-portal-gtk)$
+# Steam
+windowrule = match:class ^(steam)$, workspace 6
+windowrule = match:title ^(Sign in to Steam)$, workspace 6
+windowrule = match:class ^(steam)$, match:title ^(Special Offers)$, float on
+windowrule = match:class ^(steam)$, match:title ^(Steam - News)$, float on, no_focus on
+windowrule = match:class ^(steam)$, match:title ^(notificationtoasts_.*_desktop)$, no_focus on
+windowrule = match:class ^(steam)$, match:title (^notificationtoasts.*), no_initial_focus on
+windowrule = match:class ^(steam)$, match:title ^()$, no_focus on
 
-windowrule = noblur, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = noshadow, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = idleinhibit focus, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, title:^(.*YouTube.*)$
-windowrule = idleinhibit fullscreen, class:^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
-windowrule = tile, class:^(foobar2000.exe)$
-windowrule = noanim, class:^(foobar2000.exe)$
-windowrule = noblur, class:^(jetbrains-.*)$
-windowrule = noanim, class:^(jetbrains-.*)$
-windowrule = noblur, class:^(org.keepassxc.KeePassXC)$
-windowrule = noanim, class:^(org.keepassxc.KeePassXC)$
-windowrule = noblur, title:^(.*(Disc|WebC)ord.*)$
-windowrule = noshadow, title:^(.*(Disc|WebC)ord.*)$
-windowrule = noblur, class:^(xdg-desktop-portal-gtk)$
-windowrule = noanim, class:^(org.telegram.desktop)$
-windowrule = suppressevent maximize, class:.*
+# Media
+windowrule = match:class ^(spotify)$, match:title ^(Spotify( (Premium|Free))?)$, workspace 5
+windowrule = match:class (org.fooyin.fooyin), workspace 5
+windowrule = match:class (tidal-hifi), workspace 5
+windowrule = match:class ^(foobar2000.exe)$, workspace 5, tile on, no_anim on
+
+# Communication
+windowrule = match:class ^(org.telegram.desktop)$, workspace 4, no_anim on
+windowrule = match:class ^(org.telegram.desktop)$, match:title ^(Media viewer)$, float on
+windowrule = match:title ^(.*(Disc|ArmC|WebC)ord.*)$, workspace 3
+windowrule = match:title ^(.*(Disc|WebC)ord.*)$, no_blur on, no_shadow on
+windowrule = match:class ^(vesktop)$, workspace 3
+
+# Browsers (Workspace, No Blur, No Shadow, Idle Inhibit Fullscreen)
+windowrule = match:class ^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, workspace 2, no_blur on, no_shadow on, idle_inhibit fullscreen
+# YouTube Idle Inhibit
+windowrule = match:class ^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, match:title ^(.*YouTube.*)$, idle_inhibit focus
+
+# Dev / Games
+windowrule = match:class ^(jetbrains-.*)$, workspace 1, no_blur on, no_anim on
+windowrule = match:class ^(Albion-Online)$, workspace 1
+
+# Utilities / Floating
+windowrule = match:title ^(Extension: (Bitwarden Password Manager)), float on
+windowrule = match:title (^notificationtoasts.*), no_focus on
+windowrule = match:class ^(xdg-desktop-portal-gtk)$, float on, no_blur on
+windowrule = match:class .*, suppress_event maximize
+
+# KeePassXC
+windowrule = match:class ^(org.keepassxc.KeePassXC)$, no_blur on, no_anim on
+windowrule = match:class ^(org.keepassxc.KeePassXC)$, match:title ^(Generate Password)$, float on
+windowrule = match:class ^(org.keepassxc.KeePassXC)$, match:title ^(KeePassXC - Browser Access Request)$, float on
 
 # =======================================================================================
 # KEYBINDINGS
@@ -225,7 +241,7 @@ windowrule = suppressevent maximize, class:.*
 $mod = SUPER
 
 # Applications
-bind = $mod, Return, exec, foot
+bind = $mod, Return, exec, wezterm
 bind = $mod SHIFT, E, exec, thunar
 bind = $mod, M, exec, thunderbird
 bind = $mod, P, exec, fuzzel
@@ -234,17 +250,16 @@ bind = $mod, G, exec, firefox
 bind = $mod SHIFT, G, exec, zen
 
 # Utils (Clipboard & Screenshots)
-bind = $mod, O, exec, clipboard-picker
+bind = $mod, O, exec, ~/.config/hypr/clipboard-picker.sh
 bind = $mod SHIFT, O, exec, fuzzmoji
-bind = $mod SHIFT, P, exec, passmenu
 
 # Screenshot (Using your bash script logic)
-bind = , print, exec, wl-ocr
+bind = , print, exec, ~/.config/hypr/wl-ocr.sh
 bind = CTRL, Print, exec, grimblast save area - | swappy -f -
 bind = ALT, Print, exec, bash -c 'file="$HOME/Pictures/Screenshots/$(date +"%Y-%m-%d_%H-%M-%S").png"; grim -g "$(slurp)" "$file"; wl-copy < "$file"; notify-send "Screenshot taken" "Saved to $file" -i "$file"'
 
 # Window Management
-bind = $mod, X, exit
+bind = $mod, X, exec, wleave
 bind = $mod, W, killactive
 bind = $mod, Q, togglespecialworkspace
 bind = $mod SHIFT, Q, movetoworkspace, special
