--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -247,7 +247,7 @@ bind = $mod, M, exec, thunderbird
 bind = $mod, P, exec, fuzzel
 bind = $mod, D, exec, vesktop
 bind = $mod, G, exec, firefox
-bind = $mod SHIFT, G, exec, zen
+bind = $mod SHIFT, G, exec, zen-browser
 
 # Utils (Clipboard & Screenshots)
 bind = $mod, O, exec, ~/.config/hypr/clipboard-picker.sh
