--- a/.config/mango/config.conf
+++ b/.config/mango/config.conf
@@ -3,8 +3,10 @@ exec-once = wlr-randr --output eDP-1 --off
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
 
 # Cleanup & Audio Stack
-exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-gtk xdg-desktop-portal pipewire wireplumber pipewire-pulse
+exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-gtk xdg-desktop-portal pipewire wireplumber pipewire-pulse mpd
 exec-once = gentoo-pipewire-launcher &
+exec-once = sleep 1 && mpd &
+exec-once = sleep 1 && mpd-mpris &
 
 # Portals (Manual launch after DBus update)
 exec-once = sleep 1 && /usr/libexec/xdg-desktop-portal-wlr &
@@ -13,7 +15,7 @@ exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal &
 
 # Hardware, UI & Apps
 exec-once = brightnessctl set 10%
-exec-once = swaybg -i $HOME/Pictures/Wallpaper/Minato-Aqua-Dark.png
+# exec-once = swaybg -i $HOME/Pictures/Wallpaper/Minato-Aqua-Dark.png
 exec-once = fcitx5 -d --replace
 exec-once = mako
 exec-once = waybar
@@ -32,15 +34,19 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,wlroots
 env = XMODIFIERS,@im=fcitx
 env = QT_IM_MODULE,fcitx
+env = QT_IM_MODULES,wayland;fcitx
 env = XCURSOR_SIZE,24
 env = _JAVA_AWT_WM_NONREPARENTING,1
+env = GDK_BACKEND,wayland,x11,*
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
 
 # Keyboard
 repeat_rate = 30
 repeat_delay = 300
 
 # --- Appearance
-blur = 0
+blur = 1
 shadows = 0
 border_radius = 3
 focused_opacity = 1.0
@@ -73,7 +79,7 @@ windowrule = tags:9,isopensilent:1,appid:^(thunderbird|thunderbird-esr)$
 windowrule = tags:8,isopensilent:1,appid:^(whatsapp-for-linux)$
 windowrule = tags:7,isopensilent:1,appid:^(qBittorrent|org.qbittorrent.qBittorrent)$
 windowrule = tags:6,isopensilent:1,appid:^(steam)$
-windowrule = tags:6,isopensilent:1,title:^(Sign in to Steam)$
+windowrule = tags:6,isopensilent:1,appid:^(steam)$,title:^(Sign in to Steam)$
 windowrule = tags:5,isopensilent:1,appid:^(spotify)$
 windowrule = tags:5,isopensilent:1,appid:(org.fooyin.fooyin)
 windowrule = tags:5,isopensilent:1,appid:(tidal-hifi)
@@ -110,16 +116,36 @@ windowrule = isfloating:1,appid:^(org.keepassxc.KeePassXC)$,title:^(KeePassXC - 
 # --- Key Bindings
 bind = SUPER,r,reload_config
 bind = SUPER,p,spawn,fuzzel
+bind = SUPER,o,spawn,$HOME/.local/bin/clipboard-picker
 bind = SUPER,g,spawn,firefox
+bind = SUPER,f,togglefullscreen
 bind = SUPER,Return,spawn,wezterm
 bind = SUPER,x,spawn,wleave
 bind = SUPER+SHIFT,x,quit
 bind = SUPER,w,killclient,
 
 # Screenshot Logic
-bind = none,Print,spawn,wl-ocr
-bind = CTRL,Print,spawn,grimblast save area - | swappy -f -
-bind = ALT,Print,spawn,bash -c 'file="$HOME/Pictures/Screenshots/$(date +"%Y-%m-%d_%H-%M-%S").png"; grim -g "$(slurp)" "$file"; wl-copy < "$file"; notify-send "Screenshot taken" "Saved to $file" -i "$file"'
+bind = none,Print,spawn,$HOME/.local/bin/screenshot --full
+bind = CTRL,Print,spawn,$HOME/.local/bin/screenshot --region
+bind = SUPER,Print,spawn,wl-ocr
+bind = ALT,Print,spawn,grimblast save area - | swappy -f -
+
+# Brightness
+bind = NONE, XF86MonBrightnessUp, spawn, brightnessctl set +5%
+bind = NONE, XF86MonBrightnessDown, spawn, brightnessctl set 5%-
+
+# Volume (via pipewire/pactl)
+bind = NONE, XF86AudioRaiseVolume, spawn, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = NONE, XF86AudioLowerVolume, spawn, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = NONE, XF86AudioMute, spawn, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = NONE, XF86AudioMicMute, spawn, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Media Control (playerctl)
+bind = NONE, XF86AudioPlay, spawn, playerctl play-pause
+bind = NONE, XF86AudioPause, spawn, playerctl pause
+bind = NONE, XF86AudioNext, spawn, playerctl next
+bind = NONE, XF86AudioPrev, spawn, playerctl previous
+bind = NONE, XF86AudioStop, spawn, playerctl stop
 
 # Navigation
 bind = SUPER,Tab,focusstack,next
