waybar add dwl/window
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -5,7 +5,8 @@
     "spacing": 0,
     "modules-left": [
         "hyprland/workspaces",
-        "dwl/tags"
+        "dwl/tags",
+        "dwl/window"
     ],
     "modules-right": [
         "tray",
