--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,14 +49,23 @@ env = QT_IM_MODULES,"wayland;fcitx"
 
 # Portals: Must be restarted to pick up the env vars
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = ~/.config/hypr/xdg-desktop-portal.sh
+exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-gtk xdg-desktop-portal pipewire wireplumber pipewire-pulse mpd
+exec-once = sleep 1 && /usr/libexec/xdg-desktop-portal-wlr &
+exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal-gtk &
+exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal &
+
+# Cleanup & Audio Stack
+exec-once = gentoo-pipewire-launcher &
+exec-once = sleep 1 && mpd &
+exec-once = sleep 1 && mpd-mpris &
+
 
 # Clipboard Persist
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Authentication Agent (Polkit)
-exec-once = /usr/lib/hyprpolkitagent
+exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
 # Set cursor
 exec-once = hyprctl setcursor Future-Cyan-Hyprcursor_Theme 24
@@ -72,12 +81,6 @@ exec-once = sleep 1; qs &
 exec-once = brightnessctl set 10%
 exec-once = mako
 exec-once = [workspace 9 silent;noanim] thunderbird
-
-# Start MPD (Music Player Daemon)
-exec-once = mpd
-
-# Start MPRIS Bridge
-exec-once = mpdris2
 
 # =======================================================================================
 # LOOK & FEEL (Catppuccin Mocha)
@@ -97,7 +100,7 @@ decoration {
     dim_strength = 0.7
 
     blur {
-        enabled = false
+        enabled = true
         passes = 2
         size = 2
         new_optimizations = true
@@ -187,6 +190,28 @@ xwayland {
 # (Keep existing workspace rules as they are separate from windowrule syntax)
 workspace = w[tv1]s[false], gapsout:0, gapsin:0
 workspace = f[1]s[false], gapsout:0, gapsin:0
+
+
+# Ignore maximize requests from all apps.
+windowrule {
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
+
+# Fix some dragging issues with XWayland
+windowrule {
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
 
 # Applications -> Workspaces
 windowrule = match:class ^(thunderbird)$, workspace 9
