--- a/.config/mango/config.conf
+++ b/.config/mango/config.conf
@@ -1,6 +1,7 @@
 # Monitor & Environment
 exec-once = wlr-randr --output eDP-1 --off
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE
+exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
 # Cleanup & Audio Stack
 exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-gtk xdg-desktop-portal pipewire wireplumber pipewire-pulse mpd
@@ -15,7 +16,7 @@ exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal &
 
 # Hardware, UI & Apps
 exec-once = brightnessctl set 10%
-# exec-once = swaybg -i $HOME/Pictures/Wallpaper/Minato-Aqua-Dark.png
+exec-once = swaybg -i $HOME/Pictures/Wallpaper/Minato-Aqua-Dark.png
 exec-once = fcitx5 -d --replace
 exec-once = mako
 exec-once = waybar
