fix thunderbird on startup
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/mango/config.conf
+++ b/.config/mango/config.conf
@@ -26,7 +26,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Autostart Apps
-exec-once = thunderbird
+exec-once = thunderbird-bin
 
 # Environment Variables
 env = MOZ_ENABLE_WAYLAND,1
