hypr: use old version since hyprland in gentoo is outdated
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -77,7 +77,7 @@ exec-once = fcitx5 -d --replace
 exec-once = hypridle
 exec-once = hyprsunset
 exec-once = ~/.config/hypr/pipewire.sh
-exec-once = sleep 1; qs &
+exec-once = sleep 1; waybar &
 exec-once = brightnessctl set 10%
 exec-once = mako
 exec-once = [workspace 9 silent;noanim] thunderbird
@@ -192,73 +192,68 @@ workspace = w[tv1]s[false], gapsout:0, gapsin:0
 workspace = f[1]s[false], gapsout:0, gapsin:0
 
 
-# Ignore maximize requests from all apps.
-windowrule {
-    name = suppress-maximize-events
-    match:class = .*
+# General
+windowrule = suppressevent maximize, class:.*
+windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
-    suppress_event = maximize
-}
-
-# Fix some dragging issues with XWayland
-windowrule {
-    name = fix-xwayland-drags
-    match:class = ^$
-    match:title = ^$
-    match:xwayland = true
-    match:float = true
-    match:fullscreen = false
-    match:pin = false
-
-    no_focus = true
-}
-
-# Applications -> Workspaces
-windowrule = match:class ^(thunderbird)$, workspace 9
-windowrule = match:class ^(whatsapp-for-linux)$, workspace 8
-windowrule = match:class ^(qBittorrent|org.qbittorrent.qBittorrent)$, workspace 7
+# Workspaces
+windowrule = workspace 9, class:^(thunderbird)$
+windowrule = workspace 8, class:^(whatsapp-for-linux)$
+windowrule = workspace 7, class:^(qBittorrent|org.qbittorrent.qBittorrent)$
 
 # Steam
-windowrule = match:class ^(steam)$, workspace 6
-windowrule = match:title ^(Sign in to Steam)$, workspace 6
-windowrule = match:class ^(steam)$, match:title ^(Special Offers)$, float on
-windowrule = match:class ^(steam)$, match:title ^(Steam - News)$, float on, no_focus on
-windowrule = match:class ^(steam)$, match:title ^(notificationtoasts_.*_desktop)$, no_focus on
-windowrule = match:class ^(steam)$, match:title (^notificationtoasts.*), no_initial_focus on
-windowrule = match:class ^(steam)$, match:title ^()$, no_focus on
+windowrule = workspace 6, class:^(steam)$
+windowrule = workspace 6, title:^(Sign in to Steam)$
+windowrule = float, class:^(steam)$, title:^(Special Offers)$
+windowrule = float, class:^(steam)$, title:^(Steam - News)$
+windowrule = noinitialfocus, class:^(steam)$, title:^(Steam - News)$
+windowrule = nofocus, class:^(steam)$, title:^(notificationtoasts_.*_desktop)$
+windowrule = noinitialfocus, class:^(steam)$, title:^notificationtoasts.*
+windowrule = nofocus, class:^(steam)$, title:^$
 
 # Media
-windowrule = match:class ^(spotify)$, match:title ^(Spotify( (Premium|Free))?)$, workspace 5
-windowrule = match:class (org.fooyin.fooyin), workspace 5
-windowrule = match:class (tidal-hifi), workspace 5
-windowrule = match:class ^(foobar2000.exe)$, workspace 5, tile on, no_anim on
+windowrule = workspace 5, class:^(spotify)$
+windowrule = workspace 5, class:^(org.fooyin.fooyin)$
+windowrule = workspace 5, class:^(tidal-hifi)$
+windowrule = workspace 5, class:^(foobar2000.exe)$
+windowrule = tile, class:^(foobar2000.exe)$
+windowrule = noanim, class:^(foobar2000.exe)$
 
-# Communication
-windowrule = match:class ^(org.telegram.desktop)$, workspace 4, no_anim on
-windowrule = match:class ^(org.telegram.desktop)$, match:title ^(Media viewer)$, float on
-windowrule = match:title ^(.*(Disc|ArmC|WebC)ord.*)$, workspace 3
-windowrule = match:title ^(.*(Disc|WebC)ord.*)$, no_blur on, no_shadow on
-windowrule = match:class ^(vesktop)$, workspace 3
+# Chat
+windowrule = workspace 4, class:^(org.telegram.desktop)$
+windowrule = noanim, class:^(org.telegram.desktop)$
+windowrule = float, class:^(org.telegram.desktop)$, title:^(Media viewer)$
 
-# Browsers (Workspace, No Blur, No Shadow, Idle Inhibit Fullscreen)
-windowrule = match:class ^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, workspace 2, no_blur on, no_shadow on, idle_inhibit fullscreen
-# YouTube Idle Inhibit
-windowrule = match:class ^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$, match:title ^(.*YouTube.*)$, idle_inhibit focus
+windowrule = workspace 3, title:^(.*(Disc|ArmC|WebC)ord.*)$
+windowrule = noblur, title:^(.*(Disc|WebC)ord.*)$
+windowrule = noshadow, title:^(.*(Disc|WebC)ord.*)$
+windowrule = workspace 3, class:^(vesktop)$
 
-# Dev / Games
-windowrule = match:class ^(jetbrains-.*)$, workspace 1, no_blur on, no_anim on
-windowrule = match:class ^(Albion-Online)$, workspace 1
+# Browsers
+$browsers = ^(brave-browser|firefox|firefox-esr|floorp|zen|zen-beta|Chromium-browser|chromium-browser)$
+windowrule = workspace 2, class:$browsers
+windowrule = noblur, class:$browsers
+windowrule = noshadow, class:$browsers
+windowrule = idleinhibit fullscreen, class:$browsers
+windowrule = idleinhibit focus, class:$browsers, title:^(.*YouTube.*)$
 
-# Utilities / Floating
-windowrule = match:title ^(Extension: (Bitwarden Password Manager)), float on
-windowrule = match:title (^notificationtoasts.*), no_focus on
-windowrule = match:class ^(xdg-desktop-portal-gtk)$, float on, no_blur on
-windowrule = match:class .*, suppress_event maximize
+# Dev & Games
+windowrule = workspace 1, class:^(jetbrains-.*)$
+windowrule = noblur, class:^(jetbrains-.*)$
+windowrule = noanim, class:^(jetbrains-.*)$
+windowrule = workspace 1, class:^(Albion-Online)$
+
+# Floating / Misc
+windowrule = float, title:^(Extension: \(Bitwarden Password Manager\))$
+windowrule = nofocus, title:^notificationtoasts.*
+windowrule = float, class:^(xdg-desktop-portal-gtk)$
+windowrule = noblur, class:^(xdg-desktop-portal-gtk)$
 
 # KeePassXC
-windowrule = match:class ^(org.keepassxc.KeePassXC)$, no_blur on, no_anim on
-windowrule = match:class ^(org.keepassxc.KeePassXC)$, match:title ^(Generate Password)$, float on
-windowrule = match:class ^(org.keepassxc.KeePassXC)$, match:title ^(KeePassXC - Browser Access Request)$, float on
+windowrule = noblur, class:^(org.keepassxc.KeePassXC)$
+windowrule = noanim, class:^(org.keepassxc.KeePassXC)$
+windowrule = float, class:^(org.keepassxc.KeePassXC)$, title:^(Generate Password)$
+windowrule = float, class:^(org.keepassxc.KeePassXC)$, title:^(KeePassXC - Browser Access Request)$
 
 # =======================================================================================
 # KEYBINDINGS
