hyprland: add keybind to kill compositor
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -281,6 +281,7 @@ bind = ALT, Print, exec, bash -c 'file="$HOME/Pictures/Screenshots/$(date +"%Y-%
 # Window Management
 bind = $mod, X, exec, wleave
 bind = $mod, W, killactive
+bind = $mod SHIFT, C, exit
 bind = $mod, Q, togglespecialworkspace
 bind = $mod SHIFT, Q, movetoworkspace, special
 bind = $mod, F, fullscreen, 0
