update sway and hyprland config
Signed-off-by: Ludovico Piero <lewdovico@gnuweeb.org>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,13 +49,13 @@ env = QT_IM_MODULES,"wayland;fcitx"
 
 # Portals: Must be restarted to pick up the env vars
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-gtk xdg-desktop-portal pipewire wireplumber pipewire-pulse mpd
-exec-once = sleep 1 && /usr/libexec/xdg-desktop-portal-wlr &
-exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal-gtk &
-exec-once = sleep 2 && /usr/libexec/xdg-desktop-portal &
+exec-once = pkill -9 xdg-desktop-portal-wlr xdg-desktop-portal-hyprland xdg-desktop-portal-gtk xdg-desktop-portal mpd
+exec-once = sleep 1 && /usr/lib/xdg-desktop-portal-hyprland &
+exec-once = sleep 2 && /usr/lib/xdg-desktop-portal-gtk &
+exec-once = sleep 2 && /usr/lib/xdg-desktop-portal &
 
 # Cleanup & Audio Stack
-exec-once = gentoo-pipewire-launcher &
+# exec-once = gentoo-pipewire-launcher &
 exec-once = sleep 1 && mpd &
 exec-once = sleep 1 && mpd-mpris &
 
@@ -75,11 +75,12 @@ exec-once = fcitx5 -d --replace
 
 # System Apps
 exec-once = hypridle
+exec-once = swaybg -i $HOME/Pictures/Wallpaper/Minato-Aqua-Dark.png
 exec-once = hyprsunset
-exec-once = ~/.config/hypr/pipewire.sh
-exec-once = sleep 1; waybar &
+exec-once = sleep 1; waybar
 exec-once = brightnessctl set 10%
 exec-once = mako
+exec-once = emacs --daemon
 exec-once = [workspace 9 silent;noanim] thunderbird
 
 # =======================================================================================
@@ -89,8 +90,8 @@ general {
     border_size = 2
     col.active_border = rgb(89b4fa)
     col.inactive_border = rgb(313244)
-    gaps_in = 3
-    gaps_out = 3
+    gaps_in = 0
+    gaps_out = 0
     layout = dwindle
 }
 
@@ -197,7 +198,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
 # Workspaces
-windowrule = workspace 9, class:^(thunderbird)$
+windowrule = workspace 9, class:^(thunderbird|org.mozilla.Thunderbird)$
 windowrule = workspace 8, class:^(whatsapp-for-linux)$
 windowrule = workspace 7, class:^(qBittorrent|org.qbittorrent.qBittorrent)$
 
@@ -262,12 +263,13 @@ $mod = SUPER
 
 # Applications
 bind = $mod, Return, exec, wezterm
+bind = $mod, E, exec, emacsclient -c
 bind = $mod SHIFT, E, exec, thunar
 bind = $mod, M, exec, thunderbird
 bind = $mod, P, exec, fuzzel
 bind = $mod, D, exec, vesktop
 bind = $mod, G, exec, firefox
-bind = $mod SHIFT, G, exec, zen-browser
+bind = $mod SHIFT, G, exec, zen
 
 # Utils (Clipboard & Screenshots)
 bind = $mod, O, exec, ~/.config/hypr/clipboard-picker.sh
